Fri Dec 13 22:29:21 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (method_owner): return the class where alias is defined, not
	  the class original method is defined.

	* vm_method.c (rb_method_entry_make, rb_alias): store the originally
	  defined class in me.  [Bug #7993] [Bug #7842] [Bug #9236]

	* vm_method.c (rb_method_entry_get_without_cache): cache included
	  module but not iclass.

Fri Dec 13 16:27:17 2013  Aman Gupta <ruby@tmm1.net>

	* gc.c (gc_info_decode): Use :major_by=>:nofree as fallback reason
	  when other trigger conditions are present.

Fri Dec 13 13:25:30 2013  Koichi Sasada  <ko1@atdot.net>

	* error.c: add Exception#backtrace_locations.
	  Now, there are no setter and independent from Exception#backtrace.
	  [Feature #8960]

	* eval.c (setup_exception): set backtrace locations for `bt_location'
	  special attribute.

	* vm_backtrace.c (rb_backtrace_to_location_ary): added.

	* internal.h: ditto.

	* test/ruby/test_backtrace.rb: add a test for
	  Exception#backtrace_locations.

Fri Dec 13 12:01:07 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (garbage_collect_body): use rb_bug() and explicit error message
	  instead of using assert().
	  [Bug #9222]

Fri Dec 13 11:52:41 2013  Koichi Sasada  <ko1@atdot.net>

	* array.c: fix comment to remove the word "shady".

	* variable.c: ditto.

Fri Dec 13 11:33:55 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c: rename *shady* func/macros.
	  * RVALUE_RAW_SHADY()   -> RVALUE_WB_PROTECTED_RAW()
	  * RVALUE_SHADY()       -> RVALUE_RAW_SHADY()
	  * rgengc_check_shady() -> rgengc_check_relation().
	  And fix some messages using "shady" to "non-WB-protected".

Fri Dec 13 10:04:23 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/request_set/lockfile.rb:  Import RubyGems master a8d0669
	  with a 1.8.7 compatibility fix.
	* test/rubygems/test_gem_request_set_lockfile.rb:  ditto.

Fri Dec 13 09:50:49 2013  Eric Hodel  <drbrain@segment7.net>
